Fix menu text overflow on slim mode

--- a/src/assets/layout/styles/layout/sidebar/_sidebar_slim.scss
+++ b/src/assets/layout/styles/layout/sidebar/_sidebar_slim.scss
@@ -35,6 +35,7 @@
 
                 .layout-menu-container {
                     overflow: visible;
+                    padding: 0.75rem;
                 }
             }
 
